Started Adding Employment History

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 								<h2>Work History</h2>
 								<p>
                                     Work History Graph Goes Here
+									<div id="employmentGraph"></div>
                                 </p>
 							</header>
 
@@ -144,14 +145,13 @@
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+
 					</footer>
 
 			</div>
 
 		<!-- Scripts -->
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -159,6 +159,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+		<script src="assets/js/EmploymentGraph.js"></script>
 
 	</body>
 </html>
