Added Robot Arm

--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@
                         <h2 class="align-center">Technology And Skills</h2>
 
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<h2>Artificial Intelligence</h2>
+							<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+						</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image"><img src="images/RoboArm.png" alt="" /></div><div class="content">
 								<h2>Robotics and Automation</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -74,13 +81,7 @@
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
+
 					</section>
 
 				<!-- Three -->
