AI and Software Engineering added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h2 class="align-center">Technology And Skills</h2>
 
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ShipsAI.png" alt="" /></div><div class="content">
 							<h2>Artificial Intelligence</h2>
 							<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 						</div>
@@ -76,7 +76,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/SoftwareEngineering.png" alt="" /></div><div class="content">
 								<h2>Software Engineering</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
