--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/ShipsAI.png" alt="" /></div><div class="content">
 							<h2>Artificial Intelligence</h2>
-							<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                            <!--<h4>Multi-Agent Systems</h4> -->
+                            <!-- TODO make this a link for another page -->
+
 						</div>
 						</section>
 
@@ -78,7 +80,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/SoftwareEngineering.png" alt="" /></div><div class="content">
 								<h2>Software Engineering</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p></p>
 							</div>
 						</section>
 
