Started Interest Expansion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Josh Benton</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -41,6 +41,7 @@
 						<div class="inner">
 							<h2>Joshua Benton</h2>
 							<p>Technical Lead</p>
+							<p>Josh@Styleconnect.net</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -90,18 +91,21 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Projects</h2>
+								<p></p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Multi-Agent AI</h3>
+									<p>Developing ever evolving systems of individual "agents" each with different attributes and goals.</p>
+								<p>	Economic Simulations</p>
+									<p>	Agent Mining</p>
+
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Industrial Automation</h3>
+									<p>Improving operational efficiency and reliability while reducing the need for human labor.</p>
+									<p>Higher quality products produced faster, and cheaper.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Mus Scelerisque</h3>
