--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Josh Benton</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -108,12 +108,14 @@
 									<p>Higher quality products produced faster, and cheaper.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Software Engineering</h3>
+									<p>Java EE / ASP.Net / Python / C++ / SQL</p>
+									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
+									<p>Dynamically generated SQL such as those found in Style Connect reduce or eliminate the need for manual SQL queries. </p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Data Analytics</h3>
+									<p>Deriving insights from data to assist </p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Aenean Primis</h3>
