Data Analytics started

--- a/index.html
+++ b/index.html
@@ -111,11 +111,16 @@
 									<h3>Software Engineering</h3>
 									<p>Java EE / ASP.Net / Python / C++ / SQL</p>
 									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
-									<p>Dynamically generated SQL such as those found in Style Connect reduce or eliminate the need for manual SQL queries. </p>
+									<p>Dynamically generated SQL such as those found in
+										<a href="https://github.com/90301/Crescent-CRM-V/blob/Release/Crescent-CRM-Vaadin-Maven/src/main/java/dbUtils/MaxObject.java"> Style Connect</a> 
+										reduce or eliminate the need for manual SQL queries. </p>
 								</li>
-								<li class="icon fa-headphones">
+								<li class="icon fa-line-chart">
 									<h3>Data Analytics</h3>
-									<p>Deriving insights from data to assist </p>
+									<p>Deriving insights from data to assist decision making processes. Narrowing down possibilities and improving potential outcomes.</p>
+									<p>Census Data Analytics</p>
+									<p>Sentiment Analysis</p>
+
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Aenean Primis</h3>
