--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<p>Java EE / ASP.Net / Python / C++ / SQL</p>
 									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
 									<p>Dynamically generated SQL such as those found in
-										<a href="https://github.com/90301/Crescent-CRM-V/blob/Release/Crescent-CRM-Vaadin-Maven/src/main/java/dbUtils/MaxObject.java"> Style Connect</a> 
+										<a href="https://github.com/90301/Crescent-CRM-V/blob/Release/Crescent-CRM-Vaadin-Maven/src/main/java/dbUtils/MaxObject.java"> Style Connect</a>
 										reduce or eliminate the need for manual SQL queries. </p>
 								</li>
 								<li class="icon fa-line-chart">
@@ -120,6 +120,7 @@
 									<p>Deriving insights from data to assist decision making processes. Narrowing down possibilities and improving potential outcomes.</p>
 									<p>Census Data Analytics</p>
 									<p>Sentiment Analysis</p>
+									<!-- Create a page for this -->
 
 								</li>
 								<li class="icon fa-heart-o">
