updated header for software, added contact.

--- a/SoftwareEngineeringCodeGen.html
+++ b/SoftwareEngineeringCodeGen.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Josh Benton</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -48,7 +48,7 @@
 
 								<h3>Higher Performance</h3>
 								<p>Often there is a choice between writing higher performance code, or easier to maintain code. Using techniques like
-									<a href="https://msdn.microsoft.com/en-us/library/ms173183(v=vs.140).aspx"> reflection </a>
+									<a href="https://msdn.microsoft.com/en-us/library/ms173183(v=vs.140).aspx"> reflection</a>
 								can dramatically improve program simplicity as well as readability. For some applications this is acceptable,
 									but what happens when you need to perform millions of operations? The heavy cost of reflection starts to creep in.</p>
 								<p>Code generation either as a preprocessor or simply as a development tool can help bridge that gap. Instead of using reflection,
