--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3></h3>
+									<p></p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p></p>
 								</li>
 							</ul>
 						</div>
@@ -139,12 +139,16 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Get in touch</h2>
+								<p>If these are the kinds of skills you want for your projects/organization feel free to contact me.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#" class="button fit special">Contact</a></li>
+								<!--
+								<li><a href="#" class="button fit">Learn More (Robotics)</a></li>
+								<li><a href="#" class="button fit">Learn More (AI)</a></li>
+								<li><a href="#" class="button fit">Learn More (Software)</a></li>
+								-->
 							</ul>
 						</div>
 					</section>
