--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Get in touch</h2>
-								<p>If these are the kinds of skills you want for your projects/organization feel free to contact me.</p>
+								<h2>Get in Touch</h2>
+								<p>If these are the kinds of skills you want for your projects/organization or would like to learn more,
+									feel free to contact me.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Contact</a></li>
