added backgrounds and other images

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<div class="inner">
 							<header>
 								<h2>Get in Touch</h2>
-								<p>If these are the kinds of skills you want for your projects/organization or would like to learn more,
+								<p>If these are the kinds of skills you are seeking or would like to learn more,
 									feel free to contact me.</p>
 							</header>
 							<ul class="actions vertical">
