Added two categories sys admin and rapid prototyping

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Industrial Automation</h3>
+									<p>C / C++ / Labview / Java </p>
 									<p>Improving operational efficiency and reliability while reducing the need for human labor.</p>
-									<p>Higher quality products produced faster, and cheaper.</p>
+									<p>Higher quality products produced faster.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Software Engineering</h3>
@@ -121,15 +122,14 @@
 									<p>Census Data Analytics</p>
 									<p>Sentiment Analysis</p>
 									<!-- Create a page for this -->
-
 								</li>
-								<li class="icon fa-heart-o">
-									<h3></h3>
-									<p></p>
+								<li class="icon fa-linux">
+									<h3>Systems Administration</h3>
+									<p>Windows Server / Linux / x86 / ARM</p>
 								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p></p>
+								<li class="icon fa-flask">
+									<h3>Rapid Prototyping</h3>
+									<p>Autodesk Inventor / Solidworks / CAD</p>
 								</li>
 							</ul>
 						</div>
