--- a/index.html
+++ b/index.html
@@ -112,9 +112,12 @@
 									<h3>Software Engineering</h3>
 									<p>Java EE / ASP.Net / Python / C++ / SQL</p>
 									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
-									<p>Dynamically generated SQL such as those found in
-										<a href="https://github.com/90301/Crescent-CRM-V/blob/Release/Crescent-CRM-Vaadin-Maven/src/main/java/dbUtils/MaxObject.java"> Style Connect</a>
-										reduce or eliminate the need for manual SQL queries. </p>
+									<p>
+                                        <a href="SoftwareEngineeringDynamicSQL.html">
+                                        Dynamically generated SQL</a>
+                                        such as those found in
+                                        Style Connect
+                                        reduce or eliminate the need for manual SQL queries. </p>
 								</li>
 								<li class="icon fa-line-chart">
 									<h3>Data Analytics</h3>
