updated lower links, changed email.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 						<div class="inner">
 							<h2>Joshua Benton</h2>
 							<p>Technical Lead</p>
-							<p>Josh@Styleconnect.net</p>
+							<!--<p>Josh@Styleconnect.net</p>-->
+							<p>Josh.Benton.CE@Gmail.com</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -160,11 +161,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<ul class="icons">
+								<li><a href="https://github.com/90301" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="./index.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Josh Benton</li>
+							</ul>
 						</ul>
 
 					</footer>
