--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Projects</h2>
-								<p></p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
@@ -111,7 +110,7 @@
 								</li>
 								<li class="icon fa-code">
 									<h3>Software Engineering</h3>
-									<p>Java EE / ASP.Net / Python / C++ / SQL</p>
+									<p>Java EE / C# / ASP.Net / Python / C++ / SQL</p>
 									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
 									<p>
                                         <a href="SoftwareEngineeringDynamicSQL.html">
@@ -129,11 +128,13 @@
 								</li>
 								<li class="icon fa-linux">
 									<h3>Systems Administration</h3>
-									<p>Windows Server / Linux / x86 / ARM</p>
+									<p>Windows Server / Linux / Hyper-V / VMware ESXi / x86 / ARM</p>
+
 								</li>
 								<li class="icon fa-flask">
 									<h3>Rapid Prototyping</h3>
 									<p>Autodesk Inventor / Solidworks / CAD</p>
+									<p>Custom cooling solutions for energy efficiency and cost effectiveness.</p>
 								</li>
 							</ul>
 						</div>
