--- a/SoftwareEngineeringCodeGen.html
+++ b/SoftwareEngineeringCodeGen.html
@@ -53,7 +53,7 @@
 									but what happens when you need to perform millions of operations? The heavy cost of reflection starts to creep in.</p>
 								<p>Code generation either as a preprocessor or simply as a development tool can help bridge that gap. Instead of using reflection,
 									simply generate the required code. For simple operations like storing data, real world performance improvements of
-									1,000,000X speedups have be achieved.*</p>
+									1,000,000X speedups have been achieved.*</p>
 
 								<hr />
 								<h3>Maintainability</h3>
