format change for database article.

--- a/SoftwareEngineeringDynamicSQL.html
+++ b/SoftwareEngineeringDynamicSQL.html
@@ -45,17 +45,39 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<section class="spotlight">
 
-								<h3>Rapid development</h3>
-								<p>The majority of database operations are simple lookups (SELECT * Style Queries), most updates are simple
-								updates and additions. handling these automatically allows developers to focus on tasks at hand, not managing data.</p>
-								<h3>Performance and Efficiency</h3>
-								<p> Simplistic writing, efficient pre-processing allows the ease of Select * with the performance of a well
-								tuned query.</p>
+								<div class="image"><img src="images/database1.png" alt="" /></div>
+									<div class="content">
+										<h2>Rapid development</h2>
+										<p>The majority of database operations are simple lookups (SELECT * Style Queries), most updates are simple
+											updates and additions. handling these automatically allows developers to focus on tasks at hand, not managing data.</p>
+									</div>
+								</section>
+								<section class="spotlight">
 
-								<h3>Extensibility and Caching</h3>
-								<p>With centralized code for database operations, implementing caching strategies can improve overall program database
-								performance. Other features such as analytics and monitoring can be added seamlessly for all database bound objects.</p>
+									<div class="image"><img src="images/speed2.png" alt="" /></div>
+									<div class="content">
+										<h2>Performance and Efficiency</h2>
+										<p> Simplistic writing combined with efficient pre-processing allows the ease of Select * with the performance of a well
+											tuned query.</p>
+									</div>
+								</section>
+								<section class="spotlight">
+
+									<div class="image"><img src="images/caching.png" alt="" /></div>
+									<div class="content">
+										<h2>Extensibility and Caching</h2>
+										<p>With centralized code for database operations, implementing caching strategies can improve overall program database
+											performance. Other features such as analytics and monitoring can be added seamlessly for all database bound objects.</p>
+									</div>
+								</section>
+
+
+
+
+
+
 								<!--<a href="https://github.com/90301/Crescent-CRM-V/blob/Release/Crescent-CRM-Vaadin-Maven/src/main/java/dbUtils/MaxObject.java"></a>-->
 							</div>
 						</section>
