database picture improvement

--- a/SoftwareEngineeringDynamicSQL.html
+++ b/SoftwareEngineeringDynamicSQL.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Code Generation</title>
+		<title>Dynamic SQL</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -47,11 +47,10 @@
 							<div class="inner">
 								<section class="spotlight">
 
-								<div class="image"><img src="images/database1.png" alt="" /></div>
+								<div class="image"><img src="images/database2.png" alt="" /></div>
 									<div class="content">
 										<h2>Rapid development</h2>
-										<p>The majority of database operations are simple lookups (SELECT * Style Queries), most updates are simple
-											updates and additions. handling these automatically allows developers to focus on tasks at hand, not managing data.</p>
+										<p>Streamlining development by handling most queries automatically allows developers to focus on .</p>
 									</div>
 								</section>
 								<section class="spotlight">
