updated AI Icon.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<h2>Projects</h2>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
+								<li class="icon fa-server">
 									<h3>Multi-Agent AI</h3>
 									<p>Developing ever evolving systems of individual "agents" each with different attributes and goals.</p>
 								<p>	Economic Simulations</p>
@@ -134,7 +134,7 @@
 								<li class="icon fa-flask">
 									<h3>Rapid Prototyping</h3>
 									<p>Autodesk Inventor / Solidworks / CAD</p>
-									<p>Custom cooling solutions for energy efficiency and cost effectiveness.</p>
+									<p>Custom cooling solutions</p>
 								</li>
 							</ul>
 						</div>
