updated Industrial Automation Icon.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<p>	Agent Mining</p>
 
 								</li>
-								<li class="icon fa-laptop">
+								<li class="icon fa-tasks">
 									<h3>Industrial Automation</h3>
 									<p>C / C++ / Labview / Java </p>
 									<p>Improving operational efficiency and reliability while reducing the need for human labor.</p>
