added links to the top menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="SoftwareEngineeringDynamicSQL.html">Dynamic SQL</a></li>
+											<li><a href="SoftwareEngineeringCodeGen.html.html">Code Generation</a></li>
 										</ul>
 									</div>
 								</li>
