fixed bug with link double html

--- a/SoftwareEngineeringCodeGen.html
+++ b/SoftwareEngineeringCodeGen.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="SoftwareEngineeringDynamicSQL.html">Dynamic SQL</a></li>
-											<li><a href="SoftwareEngineeringCodeGen.html.html">Code Generation</a></li>
+											<li><a href="SoftwareEngineeringCodeGen.html">Code Generation</a></li>
 										</ul>
 									</div>
 								</li>
