--- a/SoftwareEngineeringDynamicSQL.html
+++ b/SoftwareEngineeringDynamicSQL.html
@@ -51,7 +51,7 @@
 								<div class="image"><img src="images/database2.png" alt="" /></div>
 									<div class="content">
 										<h2>Rapid development</h2>
-										<p>Streamlining development by handling most queries automatically allows developers to focus on .</p>
+										<p>Streamlining development by handling most queries automatically allows developers to focus on higher level tasks.</p>
 									</div>
 								</section>
 								<section class="spotlight">
@@ -59,7 +59,7 @@
 									<div class="image"><img src="images/speed2.png" alt="" /></div>
 									<div class="content">
 										<h2>Performance and Efficiency</h2>
-										<p> Simplistic writing combined with efficient pre-processing allows the ease of Select * with the performance of a well
+										<p> Simplistic writing combined with efficient pre-processing combines the ease of Select * with the performance of a well
 											tuned query.</p>
 									</div>
 								</section>
@@ -69,7 +69,7 @@
 									<div class="content">
 										<h2>Extensibility and Caching</h2>
 										<p>With centralized code for database operations, implementing caching strategies can improve overall program database
-											performance. Other features such as analytics and monitoring can be added seamlessly for all database bound objects.</p>
+											performance. Other features, such as analytics and monitoring, can be added seamlessly for all database-bound objects.</p>
 									</div>
 								</section>
 
