--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<ul class="features">
 								<li class="icon fa-server">
 									<h3>Multi-Agent AI</h3>
-									<p>Developing ever evolving systems of individual "agents" each with different attributes and goals.</p>
+									<p>Developing ever-evolving systems of individual "agents," each with different attributes and goals.</p>
 								<p>	Economic Simulations</p>
 									<p>	Agent Mining</p>
 
@@ -108,13 +108,13 @@
 								<li class="icon fa-tasks">
 									<h3>Industrial Automation</h3>
 									<p>C / C++ / Labview / Java </p>
-									<p>Improving operational efficiency and reliability while reducing the need for human labor.</p>
-									<p>Higher quality products produced faster.</p>
+									<p>Improving operational efficiency, product quality, and reliability.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Software Engineering</h3>
 									<p>Java EE / C# / ASP.Net / Python / C++ / SQL</p>
-									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a> software engineering tasks can be completed more accurately.</p>
+									<p>Through specialized <a href="SoftwareEngineeringCodeGen.html">code generation</a>
+										software engineering tasks can be completed with greater accuracy.</p>
 									<p>
                                         <a href="SoftwareEngineeringDynamicSQL.html">
                                         Dynamically generated SQL</a>
@@ -124,7 +124,8 @@
 								</li>
 								<li class="icon fa-line-chart">
 									<h3>Data Analytics</h3>
-									<p>Deriving insights from data to assist decision making processes. Narrowing down possibilities and improving potential outcomes.</p>
+									<p>Deriving insights from data to assist decision-making processes.
+										Predicting and improving possible outcomes.</p>
 									<p>Census Data Analytics</p>
 									<p>Sentiment Analysis</p>
 									<!-- Create a page for this -->
